# boulby

./: .gitignore
full_geom_v0/: CMakeLists.txt  full_geom_v0.cc  runTest.mac  vis.mac  vis_ptfe_only.mac
full_geom_v0/include/: AHit.hh  ActionInitialization.hh  AnaManager.hh  AnaTree.h  Constants.hh  DetectorConstruction.hh  EventAction.hh  GeneralSD.hh  Geometry.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh  VGeneralSD.hh
full_geom_v0/scripts/: cleanup.sh  common.icc  comparisonGSrockNaCl.C  compile_GSRock_NaCl_comparison_plots.sh  compile_GSRock_NaCl_diagnostic_comparison_plots.sh  compile_LS_on_off_comparison_plots.sh  compile_old_new_comparison_plots.sh  print_bkgevents.C  process.C  process_diagnostic_hists.C  process_diagnostic_hists.sh
full_geom_v0/src/: AHit.cc  ActionInitialization.cc  AnaManager.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SD.cc  SteppingAction.cc  TrackingAction.cc
full_geom_v1/: CMakeLists.txt  full_geom_v1.cc  run1.mac  vis_colors.mac  vis_detector_only.mac  vis_detector_only_3.mac  vis_detector_only_4.mac  vis_detector_only_5.mac  vis_full_geometry.mac
full_geom_v1/include/: AnaManager.hh  AnaTree.h  DetectorConstruction.hh  Geometry.hh  PrimaryGeneratorAction.hh  RunAction.hh  SD.hh  TrackingAction.hh
full_geom_v1/jobs/: full_geom_v0.sh  full_geom_v0.sub
full_geom_v1/scripts/: AnaTree.h  GenMuonEvent.h  ProcessGenMuons.C  ProperCoincTree.h  ProperCoincTree_v1.h  ReadMuonFile.C  common.icc  count_total_137Xe.C  count_total_137Xe.sh  create_edep_hists_simple_v1.C  create_old_selection_lists.sh  create_simple_selection_lists.sh  create_veto_edep_hists_simple_v1.C  drawEdepVsTdep.C  drawTdepVsTdep.C  gen_muon_distros.py  log_simple_selection.sh  plotEdepHists.C  print_bkg_events_simple_v1.sh  print_bkgevents.C  print_bkgevents_new.C  print_signal_like_events.C  print_signal_like_events_simple.C  print_signal_like_events_simple_v1.C  process.C  process_diagnostic_hists.C  process_diagnostic_hists.sh  process_proper_coinc.C  process_proper_coinc_simple.C  process_proper_coinc_simple_v1.C  process_proper_coinc_simple_v1.sh  process_proper_coinc_simple_veto1us.C  process_proper_coinc_simple_veto1us.sh  process_timing.C
full_geom_v1/src/: AHit.cc  AnaManager.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc  SD.cc
full_geom_v2/: CMakeLists.txt  full_geom_v2.cc  init_vis.mac  run.mac  vis_detector_only_1.mac  vis_detector_only_2.mac  vis_full_geometry.mac  vis_pmts_only.mac
full_geom_v2/include/: AnaManager.hh  AnaTree.h  Constants.hh  DetectorConstruction.hh  EventAction.hh  Geometry.hh  SDExternal.hh
full_geom_v2/scripts/: Constants.hh  ProperCoincTree.h  comparisonNaClPolyhalite.C  plot_gen_muon_distros.py  process.sh  process_timing.C
full_geom_v2/src/: ActionInitialization.cc  AnaManager.cc  DetectorConstruction.cc  EventAction.cc  RunAction.cc  SD.cc  SDExternal.cc
simple_geom/: CMakeLists.txt  run1.mac  runTest.mac  simple_geom.cc  vis.mac
simple_geom/include/: AnaManager.hh  AnaTree.h  TrackingAction.hh  simple_geom_ActionInitialization.hh  simple_geom_DetectorConstruction.hh  simple_geom_EventAction.hh  simple_geom_PrimaryGeneratorAction.hh  simple_geom_RunAction.hh  simple_geom_SteppingAction.hh
simple_geom/jobs/: simple_geom.sh  simple_geom.sub
simple_geom/scripts/: process.C  process_neutron_doublecount_first.C
simple_geom/src/: AnaManager.cc  TrackingAction.cc  simple_geom_ActionInitialization.cc  simple_geom_DetectorConstruction.cc  simple_geom_EventAction.cc  simple_geom_PrimaryGeneratorAction.cc  simple_geom_RunAction.cc  simple_geom_SteppingAction.cc
